# doosan-robot

./: README.md
common/: CMakeLists.txt  setup.py
common/include/: DRFLEx.h
common/src/DSR_ROBOT/: DR_common.py  DR_tcp_client.py  DR_tcp_server.py  DSR_ROBOT.py  __init__.py
doosan_robotics/: package.xml
dsr_control/: setup.py
dsr_control/config/: dsr_control.yaml
dsr_control/include/dsr_control/: dsr_hw_interface.h
dsr_control/src/: dsr_hw_interface.cpp
dsr_example/py/: CMakeLists.txt
dsr_example/py/scripts/demo/: car.py  dance_m1013.py  joy_ds4.py  joy_multi_xbox360.py  joy_test.py  joy_xbox360.py  m1013x2.py  m1013x2_no_sync.py  m1013x2_sync.py  multi_robot.py  test_modbus.py
dsr_example/py/scripts/gripper/: object_pick_and_place_simple.py  pick_and_place_simple.py  real_pick_and_place_simple.py
dsr_example/py/scripts/mobile/: multi_robot_mobile.py  single_robot_mobile.py  single_robot_mobile_circle.py
dsr_example/py/scripts/simple/: drl_reader_simple.py  dsr_service_drl_simple.py  dsr_service_io_simple.py  dsr_service_modbus_simple.py  dsr_service_motion_simple.py  dsr_service_tool_simple.py  dsr_simple_test.py  jog_simple.py  realtime.py  roscontrol_test.py  single_robot_simple.py  single_robot_simple_a0509.py
dsr_gazebo/launch/: dsr_base.launch
dsr_launcher/launch/: single_robot.launch
dsr_launcher/scripts/: dmodel_kinetic.py  dmodel_melodic.py  dmodel_noetic.py
dsr_ros_control/: CMakeLists.txt  package.xml
dsr_ros_control/config/: controllers.yaml
dsr_ros_control/launch/: load_robot.launch  start_robot_interface_streaming.launch
