<package>
  <name>dsr_ros_control</name>
  <version>1.0.0</version>
  <description>standardized launch files and descriptions</description>

  <author email="bryanstuurman@taiga.com">Bryan Stuurman</author>
 
  <maintainer email="bryanstuurman@taiga.com">Bryan Stuurman</maintainer>

  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
</package>
